--- a/ej2/styles.css
+++ b/ej2/styles.css
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&family=Yanone+Kaffeesatz:wght@300&display=swap");
 
+html{
+  background-color: black;
+  font-size: 20px;
+}
+
 * {
-  border: 1px solid red;
-  background-color: #0a0a0a;
+  /* border: 1px solid red; */
+  /* background-color: #0a0a0a; */
   color: white;
   font-family: "Yanone Kaffeesatz", sans-serif;
   box-sizing: border-box;
@@ -11,8 +16,11 @@
 }
 
 .main-container {
+  background-color: rgb(30, 30, 30) !important;
+  border-radius: 10px;
   height: 100vh;
-  margin: 20px;
+  width: 80%;
+  margin: 20px auto;
 }
 
 h1 {
@@ -20,21 +28,35 @@ h1 {
 }
 
 nav {
-  font-size: 1.8rem;
-  border-bottom: 1px solid #7B6AC8;
+  padding-top: 10px;
+  background-color: rgb(17, 17, 17);
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  font-size: 1.2rem;
+  text-align: center;  
 }
 
-nav ul {
+nav a {
+  vertical-align: 6px;
+  background-color: transparent;
+  margin-left: 15px;
   display: inline;
-  list-style: none;
-}
-
-nav li {
-  margin-left: 10px;
-  display: inline;
-}
-
-nav a{
   text-decoration: none;
+  transition: font-size 0.1s ease-out;
+
+}
+
+nav img:hover{
+  filter: saturate(2);
+  
+}
+
+nav a:hover{
+  font-size: 1.4rem;
+  transition: font-size 0.1s ease-out;
+}
+
+main{
+  margin: 50px;
 }
 
