--- a/style.css
+++ b/style.css
@@ -1,257 +1,259 @@
-/* IMPORT */
-@import url("https://fonts.googleapis.com/css2?family=Jost:wght@300");
-/*
-font-family: 'Jost', sans-serif;
-*/
+@import url("https://fonts.googleapis.com/css2?family=Crimson+Text:ital@0;1&family=Jost:wght@500&display=swap");
 
-/* VARIABLES */
-
+/* ——VARIABLES———————————————————————————————————————————— */
 :root {
-  --background: #151313;
-  --primary: #974a4a;
-  --secondary: #2b2626;
-  --mid-gray: #5a5151;
-  --text-gray: #cfb7ad;
-  --text-white: #f3f4f6;
+  --mainFont: "Jost", sans-serif;
+  --secondFont: "Crimson Text", serif;
+  /* --backColor: white;
+  --accent: black;
+  --textcolor: black; */
+  --itemsMargin: 2rem;
+  --backColor: rgb(14, 14, 14);
+  --accent: white;
+  --textcolor: rgb(217, 217, 217);
 }
 
-/* CSS RESET */
+/* ——RESET———————————————————————————————————————————— */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  list-style-type: none;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  list-style: none;
 }
-
-/* —————————————————————————————————————————————— */
 
 body {
-  background-color: var(--background);
-  color: var(--text-white);
-}
-
-header {
-  background: var(--secondary);
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 60px;
-  position: fixed;
-  top: 0;
-  z-index: 2;
-  border-bottom: 1px solid var(--text-gray);
+  min-height: 100vh;
 }
 
-.navbar,
-.navbar-list {
-  display: flex;
+html {
+  font-family: var(--mainFont);
+  font-weight: 400;
+  line-height: 1.5;
+  background: var(--backColor);
+  color: var(--textcolor);
 }
-
-.navbar-list {
-  gap: 20px;
-  font-size: 1.2rem;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-}
-
-.navbar-list a {
-  color: var(--text-gray);
-}
-
-.navbar-list li:nth-child(1) > a {
-  color: var(--text-white);
-  font-weight: 700;
-  border-bottom: var(--primary) 2px dotted;
-  font-size: calc(100% + 5px);
-  position: relative;
-  top: -5px;
-
-}
-
-/*--MAIN-------------------------------------------------------*/
 
 main {
-  background: var(--background);
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* ——NAVBAR———————————————————————————————————————————— */
+
+.navbar {
+  background-color: var(--backColor);
+  position: sticky;
+  top: 0px;
+  padding: 1rem;
+  margin-bottom: var(--itemsMargin);
+  z-index: 99;
+  border-bottom: 1px var(--accent) solid;
+}
+
+.links {
+  gap: 15px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  place-content: center;
+}
+
+.links a {
+  color: var(--textcolor);
+  font-size: 1.1rem;
+}
+
+a:not(.current):hover {
+  font-style: italic;
+  transform: rotate(-2deg);
   color: white;
 }
 
-/*Hero*/
-#hero {
-  margin: 60px 0px;
-  padding: 70px 0;
-  max-width: 1200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.hero-info {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  width: 50%;
-}
-
-/* title */
-.hero-info h1 {
-  font-size: 5rem;
-  width: 80%;
-  min-width: 500px; /*Para que nunca ocupe menos que esto en desktop*/
+.current {
+  color: pink !important;
+  border-bottom: 1px solid pink;
   font-weight: 800;
-  color: var(--text-white);
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  letter-spacing: 5px;
 }
 
-.hero-info p {
-  font-size: 20px;
-  line-height: 1.4rem;
-  width: 70%;
-  color: var(--text-gray);
-  font-family: "Jost", sans-serif;
+/* —HERO————————————————————————————————————————————— */
+
+.hero-text {
+  /* border: 1px solid red; */
+  display: flex;
+  gap: 1rem;
+  place-items: center;
 }
 
-
-.hero-info a {
-  margin-top: 10px;
-  color: var(--text-white);
-  background-color: var(--primary);
-  width: 120px;
-  padding: 8px 0px;
-  border-radius: 140px;
-  font-size: 18px;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+.hero h1 {
+  color: pink;
   text-align: center;
-  flex-grow: 1;
-  max-width: 30%;
+  font-size: clamp(3rem, 10vw, 7rem);
+  display: inline;
+  /* border: 1px solid red; */
 }
 
-.hero-info a:hover {
-  color: var(--primary);
-  background-color: var(--text-white);
+.hero p {
+  font-family: var(--secondFont);
+  /* background-color: black; */
+  color: whitesmoke;
+  padding: 1rem;
+  font-size: 1.3rem;
 }
 
-.hero-info-btns {
-  display: flex;
-  gap: 10px;
+.hero-img img {
+  display: block;
+  margin: var(--itemsMargin) 0;
+  width: clamp(300px, 100%, 1200px);
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+  border-top: 1px solid pink;
+  border-bottom: 1px solid pink;
 }
 
-.hero-card {
-  width: 300px;
-  background: var(--secondary);
-  padding: 20px;
-  border-radius: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 20px;
-}
+/* ——INFO ABOUT———————————————————————————————————————————— */
 
-.hero-card img {
-  border-radius: 10px;
-}
-
-
-/* —————————————————————————————————————————————— */
-
-.info1, .info2{
-  background-color: #974a4a;
-  max-width: 1000px;
-  border-radius: 20px;
-  display:flex;
-  align-items: center;
-  flex-flow: row nowrap;
-  padding: 40px;
-  gap:50px;
+.info {
+  color: white;
+  padding: 3rem 0;
   text-align: justify;
-  margin-bottom: 40px;
-  margin: 0 20px 40px 20px;
-  /* margin: 40px; */
 }
 
-.info2{
-  background-color: var(--secondary);
-
+.info h2 {
+  padding: 1rem;
+  color: pink;
+  font-size: 3rem;
 }
 
-.info1 h2, .info2 h2{
-  font-size: 2rem;
-  text-align: right;
-  padding: 10px;
+.info p {
+  font-family: var(--secondFont);
+  font-size: 1.3rem;
+  padding: 1rem;
 }
 
-.info1 p, .info2 p{
-  font-size: 1.2rem;
-  font-family: "Jost", sans-serif;
-}
-
-.info1 .hl, .info2 .hl{
+span {
+  color: pink;
   font-style: italic;
-  background-color: var(--text-gray);
-  color: var(--primary);
-  border-radius: 10px;
-  padding: 0 10px;
 }
 
-.info2 .hl{
-  color: var(--text-white);
-  background-color: var(--mid-gray);
-}
+/* ——CARDS———————————————————————————————————————————— */
 
-/* CARD */
-
-.cards-section{
+.cards-container {
+  margin-top: var(--itemsMargin);
   display: flex;
-  flex-flow: column nowrap;
-  /* min-width: 50vw; */
-  margin-top: 30px;
+  flex-wrap: wrap;
+  place-content: center;
+  gap: 60px 20px;
+  /* outline: 1px solid red; */
 }
 
-.cards-section-title{
-  margin-bottom: 25px;
+.card {
+  max-width: 386px;
+  background-color: var(--accent);
+  position: relative;
   text-align: center;
+  transition: all 120ms;
 }
 
-.cards-section-title h2{
-  font-size: 2.4rem;
+.card img {
+  display: block;
+  max-width: 100%;
+  transition: all 150ms;
+  filter: saturate(0);
+  /* border: 2px solid grey; */
 }
 
-.cards-section-title p{
-  font-size: 1.4rem;
-  color: var(--text-gray);
-  
-}
-
-.cards-section-cont{
-  display: flex;
-  justify-content: space-between;
-  gap: 50px;
-  background-color: #2b2626;
-  padding: 50px;
-  border-radius: 20px;
-}
-
-.card img{
-  border-radius: 20px;
-}
-
-.card h3, .card p{
-  text-align: center;
-  margin-top: 20px;
-  max-width: 200px;
-}
-
-.card h3{
-  font-size: 1.4rem;
-}
-
-.card p{
+.card-subtitle {
+  color: black;
+  position: absolute;
   font-size: 1.1rem;
-  text-align: left;
+  top: 100%;
+  left: 10px;
+  transform: translateY(-50%);
+  background-color: pink;
+  padding: 0.4rem 1rem;
+  /* text-align: center; */
+  /* border-radius: 100%; */
+}
+
+.card img:hover {
+  opacity: 0.9;
+  outline: 1px solid pink;
+  filter: saturate(1);
+}
+
+/* ——CONTACT & MAP———————————————————————————————————————————— */
+
+.contact {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+iframe {
+  width: 100%;
+}
+
+.material-symbols-outlined {
+  padding-right: 0.8rem;
+  vertical-align: bottom;
+}
+
+/* ——NEWSLETTER———————————————————————————————————————————— */
+
+.newsletter {
+  /* background-color: black; */
+  color: white;
+  padding: 6rem 1rem;
+  text-align: justify;
+  position: relative;
+}
+
+.newsletter h2 {
+  color: pink;
+  font-size: 3rem;
+}
+
+.form {
+  display: flex;
+  gap: 100px;
+}
+
+.form input {
+  height: 100%;
+  font-size: 1.2rem;
+  border: none;
+  padding: 0 2rem;
+  background-color: rgb(82, 82, 82);
+  color: white;
+}
+
+.form input:focus {
+  outline: 2px solid pink;
+}
+
+.form button {
+  font-size: 1.4rem;
+  padding: 1rem;
+  height: 100%;
+  background-color: pink;
+  color: black;
+  border: none;
+}
+
+/* ——MEDIA QUERIES———————————————————————————————————————————— */
+
+@media (width <= 700px) {
+  .hero-text {
+    flex-direction: column;
+  }
+
+  .form {
+    flex-direction: column;
+  }
+
+  .contact {
+    flex-direction: column;
+    align-items: start;
+  }
 }
